# shuntingYard

./: README.md  cabal.project.freeze  shuntingYard.cabal  stack.yaml
src/: ShuntingYard.hs
test/: Test.hs
