cabal-version:       3.0
-- For further documentation, see http://haskell.org/cabal/users-guide/

name:                shuntingYard
version:             1.0.0
author:              Stefan Klinger
maintainer:          git@stefan-klinger.de

category: experimantal
synopsis: Shunting Yard implementation

description: This is an implementation of Dijkstra's Shunting Yard
  algorithm with one stack.

license: GPL-3.0-or-later

extra-source-files:  README.md


common shared-properties
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , LambdaCase
  ghc-options:         -Wall
                       -Werror
                       -Wwarn=missing-local-signatures
                       -Wwarn=missing-export-lists
                       -Wwarn=unused-top-binds
                       -Wwarn=deprecations
                       -Werror=unused-imports
                       -Wno-orphans
                       -Wwarn=name-shadowing

  mixins:              base hiding ( Control.Concurrent, Control.Exception
                                   , Control.Concurrent.STM )


library
  import:              shared-properties
  hs-source-dirs:      src

  exposed-modules: ShuntingYard

  build-depends:       base


test-suite test
  import:              shared-properties
  type:                exitcode-stdio-1.0

  hs-source-dirs:      test
  main-is:             Test.hs

  build-depends:       shuntingYard
                     , base
                     , QuickCheck
